fix memory limit again